# rag-chatbot-sample

./: .env.sample  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
app/: main.py
setup/: setup_from_pdf.py
